html-db-website/aws-eks/terraform/security_group.tf
resource "aws_security_group" "alb" {
  name        = "nginx-alb-sg"
  vpc_id      = aws_vpc.eks.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "alb_to_nodes" {
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8080
  protocol                 = "tcp"
  security_group_id        = aws_eks_cluster.nginx.vpc_config[0].cluster_security_group_id
  source_security_group_id = aws_security_group.alb.id # From the previous step
}
